--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 body {
-    background-color: #0093E9;
-background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+    box-sizing: border-box;
 }
 
 .loader {
