--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,11 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 body {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+    /* background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
+    /* background-color: #f5f5f5; */
 }
 
 .loader {
@@ -51,8 +51,8 @@ body {
     }
   } 
   @keyframes animloader {
-      50% {
-        transform: scale(1) translate(-50%, -50%);
-  }
+    50% {
+      transform: scale(1) translate(-50%, -50%);
+    }
   }
       
