--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ body {
     /* background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
     /* background-color: #f5f5f5; */
+    background-color: #F3F4F6;
 }
 
 .loader {
